maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:70: error: value !=- is not a member of Int
       if(_C_(j)!=-1){
                ^ShortestPathMaze:72: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Byte)Int
match expected type ?
        it + = 1 
           ^